[package]
name = "robo_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "unicode"] }
serde = { version = "1.0.201", features = ["derive", "serde_derive"] }
