[package]
name = "robo_archiver"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "unicode"] }
csv = "1.3.0"
derive_more = "0.99.17"
dialoguer = "0.11.0"
serde = { version = "1.0.201", features = ["derive", "serde_derive"] }
termsize = "0.1.6"
